--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
 
     <title>Resume</title>
@@ -14,7 +12,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-sm-2"><img src="https://lh3.googleusercontent.com/pFIBFraZ5O1vNbZtERYs_9iHA1vt9wlvQVOUcqVj8qzRRHiCX_ajzftr_OSqGTjKALUScf0abqk-wvwR1sKnSCyX4ULuEJhcDwFRziKdu0egOWQJs3_qoKwMY_hPj3y2m6sdOfGmrBAAK2CD6tDk0x_0iJ5LczB0skY4D45izuiCfK8a8-eH7h_puzqsovQT-0jzv2r-bB8XFYTGVXEaXMnW6kkSnVMAmUN72ZVmPMC94ptrxIBWnXFjfeKu6aQbLuxKBTsWEQJ0tJG31AFT6WZWv0yMCRxn24gLA1h3qm1d21FldmhmrrnIc1dGQX7eHhgdUZ8_lumAeaaVE1ykyuf0YVxNoOv05i2xmy94hKH83psxiGxD4gnw6l4f5yeaPUMCU8qn7d81WH3xehnlT4ZMbknyeeWBmR2llCDofwQfSQbzfsdVDlQYFC59yz7Kdh1zzUufol7sJvtU63az66cQaV-fx_P9KQFdrfTm0yOfqRuasBHODGp5pSJ61mPphB7v22k2uvggV16zsqdO0C1RC8SAbXP3HZM5hnO9LZuzMDu4aVvT9UGtQzLeq2XuucDfNzIiggsRij-4lRbHQMBa_mrmDSOXUEnLCUkf6agjCSO2HdMdeJprRGUpGmQQQaBKX7k_ZcKYoxzbf6o-N27LWmG_iUWz1_ovRKEzVU5zMjbhn31IGfk=w142-h170-no"></div>
+            <div class="col-sm-2"><img src="https://9mobi.vn/cf/images/2015/04/nkk/hinh-avatar-dep-1.jpg" width="158"></div>
             <div class="col-sm-10">
                 <div>Văn Quốc Hùng</div>
                 <div>Dev</div>
@@ -27,25 +25,46 @@
             <div class="col-sm-2 leftgroup">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-sm-12">
-                            Contact
-                        </div>
+                        <div class="col-sm-12">Contact</div>
+                        <div class="col-sm-12 skill1">Skill1</div>
+                        <div class="col-sm-12 skill2">Skill2</div>
+                        <div class="col-sm-12 hobbies">Hobbies</div>
                     </div>
                 </div>
             </div>
             <div class="col-sm-10 rightgroup">
                 <div class="container-fluid">
+                    <div class="row">exp</div>
+                </div>
+                <div class="container-fluid">
                     <div class="row">
-                        <div class="col-sm-12">
-                            Exp
+                        <div class="col-sm-10">
+                            <div class="col-sm">eduheader</div>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-sm-10">degree</div>
+                                    <div class="col-sm-2">time</div>
+                                    <div class="col-sm">
+                                        <div class="col-sm">school</div>
+                                        <div class="col-sm">detail</div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-10">degree</div>
+                                    <div class="col-sm-2">time</div>
+                                    <div class="col-sm">
+                                        <div class="col-sm">school</div>
+                                        <div class="col-sm">detail</div>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
