Format avatar and info

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-2"><img src="https://9mobi.vn/cf/images/2015/04/nkk/hinh-avatar-dep-1.jpg" width="158"></div>
-            <div class="col-sm-10">
-                <div>Văn Quốc Hùng</div>
-                <div>Dev</div>
+        <div class="row" id="back">
+            <div class="col-sm-2"><img src="https://9mobi.vn/cf/images/2015/04/nkk/hinh-avatar-dep-1.jpg" width="157"></div>
+            <div class="col-sm-10" id="padding">
+                <div style="text-transform: uppercase;font-size: 13px;">Software Engineer</div>
+                <div style="font-size: 30px;text-transform: uppercase;">Văn Quốc Hùng</div>
+                <div>Web Engineer</div>
                 <div>
                     Open know age use whom him than lady was. On lasted uneasy exeter my itself effect spirit. At design he vanity at cousin longer looked ye. Design praise me father an favour. As greatly replied it windows of an minuter behaved passage. Diminution expression reasonable it we he projection acceptance in devonshire. Perpetual it described at he applauded.
                 </div>
