--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="col-sm-2 leftgroup">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-sm-12">Contact</div>
+                        <div class="col-sm-12">CONTACTt</div>
                         <div class="col-sm-12 skill1">Skill1</div>
                         <div class="col-sm-12 skill2">Skill2</div>
                         <div class="col-sm-12 hobbies">Hobbies</div>
