--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             <div class="col-sm-10" id="padding">
                 <div style="text-transform: uppercase;font-size: 13px;">Software Engineer</div>
                 <div style="font-size: 30px;text-transform: uppercase;">Văn Quốc Hùng</div>
-                <div>Web Engineer</div>
-                <div>
+                <div style="font-size: 13px;">Web Engineer</div>
+                <div style="font-size: 12px;">
                     Open know age use whom him than lady was. On lasted uneasy exeter my itself effect spirit. At design he vanity at cousin longer looked ye. Design praise me father an favour. As greatly replied it windows of an minuter behaved passage. Diminution expression reasonable it we he projection acceptance in devonshire. Perpetual it described at he applauded.
                 </div>
-            </div>
-        </div>
+            </div>        </div>
         <div class="row">
             <div class="col-sm-2 leftgroup">
                 <div class="container-fluid">
