--- a/index.html
+++ b/index.html
@@ -8,31 +8,98 @@
 
     <title>Resume</title>
     <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
         <div class="row" id="back">
-            <div class="col-sm-2"><img src="https://9mobi.vn/cf/images/2015/04/nkk/hinh-avatar-dep-1.jpg" width="157"></div>
-            <div class="col-sm-10" id="padding">
-                <div style="text-transform: uppercase;font-size: 13px;">Software Engineer</div>
-                <div style="font-size: 30px;text-transform: uppercase;">Văn Quốc Hùng</div>
-                <div style="font-size: 13px;">Web Engineer</div>
-                <div style="font-size: 12px;">
+            <div class="col-sm-3 avatar"><img src="https://9mobi.vn/cf/images/2015/04/nkk/hinh-avatar-dep-1.jpg" width="157"></div>
+            <div class="col-sm-9" id="padding">
+                <div class="Sof">Software Engineer</div>
+                <div class="name">Văn Quốc Hùng</div>
+                <div class="WebEng">Web Engineer</div>
+                <div class="Mota">
                     Open know age use whom him than lady was. On lasted uneasy exeter my itself effect spirit. At design he vanity at cousin longer looked ye. Design praise me father an favour. As greatly replied it windows of an minuter behaved passage. Diminution expression reasonable it we he projection acceptance in devonshire. Perpetual it described at he applauded.
                 </div>
-            </div>        </div>
+            </div>
+        </div>
         <div class="row">
-            <div class="col-sm-2 leftgroup">
+            <div class="col-sm-3 leftgroup">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-sm-12">CONTACTt</div>
-                        <div class="col-sm-12 skill1">Skill1</div>
-                        <div class="col-sm-12 skill2">Skill2</div>
-                        <div class="col-sm-12 hobbies">Hobbies</div>
+                        <div class="col-sm-12">
+                            <a>TP.HCM,VIETNAM</a><br>
+                            <a>+84 961859480</a><br>
+                            <a>gunny05995@gmail.com</a><br>
+                            <a>facebook.com</a>
+                        </div>
+                        <div class="col-sm-12 skill1">SKILLS</div>
+                        <div class="col-sm-12 skill1">
+                            <a>PROFESSIONAL</a><br>
+                            <a>HTML</a>
+                            <a class="rate1" style="margin-left: 20px;">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></a><br>
+                            <a>PHP</a>
+                            <a class="rate2" style="margin-left: 33px;">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></a><br>
+                            <a>PS</a>
+                            <a class="rate3" style="margin-left: 44px;">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span></a><br>
+                            <a>C/C++</a>
+                            <a class="rate4" style="margin-left: 14px;">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></a>
+                        </div>                        <div class="col-sm-12 skill2">
+                            <a>PERSONAL</a><br>
+                            <a>S1</a>
+                            <a>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></a><br>
+                            <a>S2</a>
+                            <a>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></a><br>
+                            <a>S3</a>
+                            <a>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></a><br>
+                            <a>S4</a>
+                            <a>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></a><br>
+                        </div>
+                        <div class="col-sm-12 hobbies">HOBBIES</div>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-10 rightgroup">
+            <div class="col-sm-9 rightgroup">
                 <div class="container-fluid">
                     <div class="row">exp</div>
                 </div>
