--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
 
     <title>Resume</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -27,11 +28,11 @@
             <div class="col-sm-3 leftgroup">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-sm-12">
-                            <a>TP.HCM,VIETNAM</a><br>
-                            <a>+84 961859480</a><br>
-                            <a>gunny05995@gmail.com</a><br>
-                            <a>facebook.com</a>
+                        <div class="col-sm-12 icon">
+                            <a href="#" class="fa fa-phone icon">+84 961859480</a><br>
+                            <a href="#" class="fa fa-google-plus-circle icon">gunny05995@gmail.com</a><br>
+                            <a href="#" class="fa fa-facebook-official icon">facebook</a><br>
+                            <a href="#" class="fa fa-home icon">TP.HCM,VIET NAM</a><br>
                         </div>
                         <div class="col-sm-12 skill1">SKILLS</div>
                         <div class="col-sm-12 skill1">
@@ -64,34 +65,35 @@
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></a>
-                        </div>                        <div class="col-sm-12 skill2">
+                        </div>
+                        <div class="col-sm-12 skill2">
                             <a>PERSONAL</a><br>
-                            <a>S1</a>
-                            <a>
+                            <a>Game</a>
+                            <a class="rate5" style="margin-left: 20px;">
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></a><br>
-                            <a>S2</a>
-                            <a>
+                            <a>Football</a>
+                            <a class="rate6" style="margin-left: 4px;">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></a><br>
+                            <a>Art</a>
+                            <a class="rate7" style="margin-left: 40px;">
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></a><br>
-                            <a>S3</a>
-                            <a>
-                                <span class="fa fa-star checked"></span>
+                            <a>Swim</a>
+                            <a class="rate8" style="margin-left: 24px;">
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span></a><br>
-                            <a>S4</a>
-                            <a>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></a><br>
                         </div>
@@ -101,7 +103,12 @@
             </div>
             <div class="col-sm-9 rightgroup">
                 <div class="container-fluid">
-                    <div class="row">exp</div>
+                    <div class="row">
+                        <div class="col-sm-12" style="background-color: antiquewhite">EXPERIENCE
+                            <a class="fa fa-briefcase"></a>
+                        </div>
+
+                    </div>
                 </div>
                 <div class="container-fluid">
                     <div class="row">
