--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row" id="back">
             <div class="col-sm-3 avatar"><img src="https://9mobi.vn/cf/images/2015/04/nkk/hinh-avatar-dep-1.jpg" width="157"></div>
-            <div class="col-sm-9" id="padding">
+            <div class="col-sm-9 info" id="padding">
                 <div class="Sof">Software Engineer</div>
                 <div class="name">Văn Quốc Hùng</div>
                 <div class="WebEng">Web Engineer</div>
@@ -104,7 +104,7 @@
             <div class="col-sm-9 rightgroup">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-sm-12" style="background-color: antiquewhite">EXPERIENCE
+                        <div class="col-sm-12" style="background-color: #b68416">EXPERIENCE
                             <a class="fa fa-briefcase"></a>
                         </div>
 
