--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
-
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <title>Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Style.css">
@@ -29,11 +29,12 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-12 icon">
-                            <a href="#" class="fa fa-phone icon">+84 961859480</a><br>
-                            <a href="#" class="fa fa-google-plus-circle icon">gunny05995@gmail.com</a><br>
-                            <a href="#" class="fa fa-facebook-official icon">facebook</a><br>
-                            <a href="#" class="fa fa-home icon">TP.HCM,VIET NAM</a><br>
+                            <a href="#" class="fa fa-phone icon"><a style="margin-left: 5px;font-size: 15px">+84 961859480</a></a><br>
+                            <a href="#" class="fa fa-google-plus-circle icon"><a style="font-size: 15px;margin-left: 5px">gunny05995@gmail.com</a></a><br>
+                            <a href="#" class="fa fa-facebook-official icon"><a style="font-size: 15px;margin-left: 5px">facebook</a></a><br>
+                            <a href="#" class="fa fa-home icon"><a style="font-size: 15px;margin-left: 5px">TP.HCM,VIET NAM</a></a><br>
                         </div>
+                        <hr style="width: 80%;size: 1px; background-color: orange" >
                         <div class="col-sm-12 skill1">SKILLS</div>
                         <div class="col-sm-12 skill1">
                             <a>PROFESSIONAL</a><br>
@@ -97,23 +98,30 @@
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></a><br>
                         </div>
-                        <div class="col-sm-12 hobbies">HOBBIES</div>
+                        <hr style="width: 80%;size: 1px; background-color: orange" >
+                        <div class="col-sm-12 hobbies">
+                            <a>HOBBIES</a><br>
+                            <a class="fa fa-gamepad "style="font-size: 30px;padding: 5px"></a>
+                            <a class='fas fa-swimmer' style="font-size: 30px;padding: 5px"></a>
+                            <a class="fa fa-futbol-o" style="font-size: 30px;padding: 5px"></a>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-sm-9 rightgroup">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-sm-12" style="background-color: #b68416">EXPERIENCE
-                            <a class="fa fa-briefcase"></a>
+                        <div class="col-sm-12 empty"></div>
+                        <div class="col-sm-12" style="background-color: #b68416;font-size: 23px">EXPERIENCE
+                            <a class="fa fa-briefcase" style="margin-left: 630px"></a>
                         </div>
-
                     </div>
                 </div>
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-10">
                             <div class="col-sm">eduheader</div>
+
                             <div class="container">
                                 <div class="row">
                                     <div class="col-sm-10">degree</div>
@@ -132,7 +140,14 @@
                                     </div>
                                 </div>
                             </div>
-
+                        </div>
+                    </div>
+                </div>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-12 empty"></div>
+                        <div class="col-sm-12" style="background-color: #b68416;font-size: 23px">EDUCATION
+                            <a class="fa fa-briefcase" style="margin-left: 630px"></a>
                         </div>
                     </div>
                 </div>
