--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-12 empty"></div>
+                        <div class="col-sm-12" style="background-color: #b68416;font-size: 23px">EDUCATION
+                            <a class="fas fa-graduation-cap" style="margin-left: 625px"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-12 empty"></div>
                         <div class="col-sm-12" style="background-color: #b68416;font-size: 23px">EXPERIENCE
                             <a class="fa fa-briefcase" style="margin-left: 630px"></a>
                         </div>
@@ -120,8 +128,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-10">
-                            <div class="col-sm">eduheader</div>
-
+                            <div class="col-sm"></div>
                             <div class="container">
                                 <div class="row">
                                     <div class="col-sm-10">degree</div>
@@ -146,8 +153,8 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-12 empty"></div>
-                        <div class="col-sm-12" style="background-color: #b68416;font-size: 23px">EDUCATION
-                            <a class="fa fa-briefcase" style="margin-left: 630px"></a>
+                        <div class="col-sm-12" style="background-color: #b68416;font-size: 23px">REFERENCE
+                            <a class="fa fa-star" style="margin-left: 640px"></a>
                         </div>
                     </div>
                 </div>
