--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
         <div class="row" id="back">
             <div class="col-sm-3 avatar"><img src="https://9mobi.vn/cf/images/2015/04/nkk/hinh-avatar-dep-1.jpg" width="157"></div>
             <div class="col-sm-9 info" id="padding">
-                <div class="Sof">Software Engineer</div>
-                <div class="name">Văn Quốc Hùng</div>
-                <div class="WebEng">Web Engineer</div>
+                <div style="font-size:20px;text-align: center"><strong>PERSONAL INFORMATION</strong></div>
                 <div class="Mota">
                     Open know age use whom him than lady was. On lasted uneasy exeter my itself effect spirit. At design he vanity at cousin longer looked ye. Design praise me father an favour. As greatly replied it windows of an minuter behaved passage. Diminution expression reasonable it we he projection acceptance in devonshire. Perpetual it described at he applauded.
                 </div>
@@ -28,6 +26,10 @@
             <div class="col-sm-3 leftgroup">
                 <div class="container-fluid">
                     <div class="row">
+                        <div class="Sof" style="margin: auto;color: orange">Software Engineer</div>
+                        <div class="name" style="margin: auto;color: white;"><strong>Văn Quốc Hùng</strong></div>
+                        <div class="WebEng" style="margin: auto;color: orange">Web Engineer</div>
+                        <div class="col-sm-12 hobbies" style="height:20px;background-color:orange;text-align: center">CONTACT</div>
                         <div class="col-sm-12 icon">
                             <a href="#" class="fa fa-phone icon"><a style="margin-left: 5px;font-size: 15px">+84 961859480</a></a><br>
                             <a href="#" class="fa fa-google-plus-circle icon"><a style="font-size: 15px;margin-left: 5px">gunny05995@gmail.com</a></a><br>
@@ -35,7 +37,7 @@
                             <a href="#" class="fa fa-home icon"><a style="font-size: 15px;margin-left: 5px">TP.HCM,VIET NAM</a></a><br>
                         </div>
                         <hr style="width: 80%;size: 1px; background-color: orange" >
-                        <div class="col-sm-12 skill1">SKILLS</div>
+                        <div class="col-sm-12 skill1" style="height:20px;background-color:orange;text-align: center;bottom: 5px">SKILLS</div>
                         <div class="col-sm-12 skill1">
                             <a>PROFESSIONAL</a><br>
                             <a>HTML</a>
@@ -99,12 +101,12 @@
                                 <span class="fa fa-star"></span></a><br>
                         </div>
                         <hr style="width: 80%;size: 1px; background-color: orange" >
-                        <div class="col-sm-12 hobbies">
-                            <a>HOBBIES</a><br>
-                            <a class="fa fa-gamepad "style="font-size: 30px;padding: 5px"></a>
-                            <a class='fas fa-swimmer' style="font-size: 30px;padding: 5px"></a>
-                            <a class="fa fa-futbol-o" style="font-size: 30px;padding: 5px"></a>
-                        </div>
+                        <div class="col-sm-12 hobbies" style="height:20px;background-color:orange;text-align: center;bottom: 5px">HOBBIES</div>
+                            <div class="skill1" style="margin: auto">
+                                <a class="fa fa-gamepad "style="font-size: 30px;padding: 5px"></a>
+                                <a class='fas fa-swimmer' style="font-size: 30px;padding: 5px"></a>
+                                <a class="fa fa-futbol-o" style="font-size: 30px;padding: 5px"></a>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -112,16 +114,40 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-12 empty"></div>
-                        <div class="col-sm-12" style="background-color: #b68416;font-size: 23px">EDUCATION
-                            <a class="fas fa-graduation-cap" style="margin-left: 625px"></a>
+                        <div class="col-sm-12" style="background-color: #b68416;font-size: 23px">EXPERIENCE
+                            <a class="fa fa-briefcase" style="margin-left: 625px"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="container py-5">
+                    <div class="row">
+                        <div class="col-lg-7 mx-auto">
+                            <ul class="timeline">
+                                <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
+                                    <div class="timeline-arrow"></div>
+                                    <h2 class="h5 mb-0">Title of section 1</h2><span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>21 March, 2019</span>
+                                    <p class="text-small mt-2 font-weight-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper.</p>
+                                </li>
+                                <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
+                                    <div class="timeline-arrow"></div>
+                                    <h2 class="h5 mb-0">Title of section 2</h2><span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>5 April, 2019</span>
+                                    <p class="text-small mt-2 font-weight-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper.</p>
+                                </li>
+                                <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
+                                    <div class="timeline-arrow"></div>
+                                    <h2 class="h5 mb-0">Title of section 3</h2><span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>18 August, 2019</span>
+                                    <p class="text-small mt-2 font-weight-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                </li>
+                            </ul>
+
                         </div>
                     </div>
                 </div>
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-12 empty"></div>
-                        <div class="col-sm-12" style="background-color: #b68416;font-size: 23px">EXPERIENCE
-                            <a class="fa fa-briefcase" style="margin-left: 630px"></a>
+                        <div class="col-sm-12" style="background-color: #b68416;font-size: 23px">EDUCATION
+                            <a  class="fas fa-graduation-cap" style="margin-left: 622px"></a>
                         </div>
                     </div>
                 </div>
@@ -154,7 +180,7 @@
                     <div class="row">
                         <div class="col-sm-12 empty"></div>
                         <div class="col-sm-12" style="background-color: #b68416;font-size: 23px">REFERENCE
-                            <a class="fa fa-star" style="margin-left: 640px"></a>
+                            <a class="fa fa-star" style="margin-left: 635px"></a>
                         </div>
                     </div>
                 </div>
