--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <div class="container">
         <div class="row" id="back">
-            <div class="col-sm-3 avatar"><img src="https://9mobi.vn/cf/images/2015/04/nkk/hinh-avatar-dep-1.jpg" width="157"></div>
+            <div class="col-sm-3 avatar"><img src="https://www.diplomacy.edu/sites/all/themes/jollyany/demos/no-avatar.jpg" width="250" style="border-radius: 50%;margin-top: 10px"></div>
             <div class="col-sm-9 info" id="padding">
-                <div style="font-size:20px;text-align: center"><strong>PERSONAL INFORMATION</strong></div>
-                <div class="Mota">
+                <div style="font-size:20px;margin: auto;text-align:center;height:25px;width:60%;background-color: #555557;color: whitesmoke"><strong>PERSONAL INFORMATION</strong></div>
+                <div class="col-sm-6 Mota" style="margin:auto;color:whitesmoke">
                     Open know age use whom him than lady was. On lasted uneasy exeter my itself effect spirit. At design he vanity at cousin longer looked ye. Design praise me father an favour. As greatly replied it windows of an minuter behaved passage. Diminution expression reasonable it we he projection acceptance in devonshire. Perpetual it described at he applauded.
                 </div>
             </div>
@@ -26,9 +26,10 @@
             <div class="col-sm-3 leftgroup">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="Sof" style="margin: auto;color: orange">Software Engineer</div>
+                        <div class="Sof" style="margin: auto;color: orange;margin-top: 36px">Software Engineer</div>
+                        <br>
                         <div class="name" style="margin: auto;color: white;"><strong>Văn Quốc Hùng</strong></div>
-                        <div class="WebEng" style="margin: auto;color: orange">Web Engineer</div>
+                        <div class="WebEng" style="margin: auto;color: orange;margin-bottom: 10px">Web Engineer</div>
                         <div class="col-sm-12 hobbies" style="height:20px;background-color:orange;text-align: center">CONTACT</div>
                         <div class="col-sm-12 icon">
                             <a href="#" class="fa fa-phone icon"><a style="margin-left: 5px;font-size: 15px">+84 961859480</a></a><br>
@@ -114,7 +115,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-12 empty"></div>
-                        <div class="col-sm-12" style="background-color: #b68416;font-size: 23px">EXPERIENCE
+                        <div class="col-sm-12" style="background-color: #555557;font-size: 23px;color:whitesmoke">EXPERIENCE
                             <a class="fa fa-briefcase" style="margin-left: 625px"></a>
                         </div>
                     </div>
@@ -146,7 +147,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-12 empty"></div>
-                        <div class="col-sm-12" style="background-color: #b68416;font-size: 23px">EDUCATION
+                        <div class="col-sm-12" style="background-color: #555557;font-size: 23px;color:whitesmoke">EDUCATION
                             <a  class="fas fa-graduation-cap" style="margin-left: 622px"></a>
                         </div>
                     </div>
@@ -179,7 +180,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-12 empty"></div>
-                        <div class="col-sm-12" style="background-color: #b68416;font-size: 23px">REFERENCE
+                        <div class="col-sm-12" style="background-color: #555557;font-size: 23px;color:whitesmoke">REFERENCE
                             <a class="fa fa-star" style="margin-left: 635px"></a>
                         </div>
                     </div>
