--- a/index.html
+++ b/index.html
@@ -158,18 +158,28 @@
                             <div class="col-sm"></div>
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-sm-10">degree</div>
-                                    <div class="col-sm-2">time</div>
+                                    <div class="col-sm-10">
+                                        <div>Tốt nghiệp trường THPT Củ Chi</div>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <div>2016-2019</div>
+                                    </div>
                                     <div class="col-sm">
-                                        <div class="col-sm">school</div>
+                                        <div class="col-sm">
+                                            <div>THPT Củ Chi</div>
+                                        </div>
                                         <div class="col-sm">detail</div>
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-10">degree</div>
-                                    <div class="col-sm-2">time</div>
+                                    <div class="col-sm-10">
+                                        <div>Đang học tại trường đào tạo lập trình viên Aptech</div>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <div>2019-2022</div>
+                                    </div>
                                     <div class="col-sm">
-                                        <div class="col-sm">school</div>
+                                        <div class="col-sm">Aptech Education</div>
                                         <div class="col-sm">detail</div>
                                     </div>
                                 </div>
@@ -183,6 +193,7 @@
                         <div class="col-sm-12" style="background-color: #555557;font-size: 23px;color:whitesmoke">REFERENCE
                             <a class="fa fa-star" style="margin-left: 635px"></a>
                         </div>
+                        <div style="margin:auto;text-align: center;margin-top: 10px;margin-bottom: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</div>
                     </div>
                 </div>
             </div>
