--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div class="row" id="back">
             <div class="col-sm-3 avatar"><img src="https://www.diplomacy.edu/sites/all/themes/jollyany/demos/no-avatar.jpg" width="250" style="border-radius: 50%;margin-top: 10px"></div>
             <div class="col-sm-9 info" id="padding">
-                <div style="font-size:20px;margin: auto;text-align:center;height:25px;width:60%;background-color: #555557;color: whitesmoke"><strong>PERSONAL INFORMATION</strong></div>
+                <div class="col-sm" style="font-size:20px;margin: auto;text-align:center;height:25px;width:60%;background-color: #555557;color: whitesmoke">
+                    <div><strong>PERSONAL INFORMATION</strong></div>
+                </div>
                 <div class="col-sm-6 Mota" style="margin:auto;color:whitesmoke">
                     Open know age use whom him than lady was. On lasted uneasy exeter my itself effect spirit. At design he vanity at cousin longer looked ye. Design praise me father an favour. As greatly replied it windows of an minuter behaved passage. Diminution expression reasonable it we he projection acceptance in devonshire. Perpetual it described at he applauded.
                 </div>
@@ -116,7 +118,7 @@
                     <div class="row">
                         <div class="col-sm-12 empty"></div>
                         <div class="col-sm-12" style="background-color: #555557;font-size: 23px;color:whitesmoke">EXPERIENCE
-                            <a class="fa fa-briefcase" style="margin-left: 625px"></a>
+                            <a class="fa fa-briefcase example" style="margin-left: 625px"></a>
                         </div>
                     </div>
                 </div>
@@ -148,7 +150,7 @@
                     <div class="row">
                         <div class="col-sm-12 empty"></div>
                         <div class="col-sm-12" style="background-color: #555557;font-size: 23px;color:whitesmoke">EDUCATION
-                            <a  class="fas fa-graduation-cap" style="margin-left: 622px"></a>
+                            <a  class="fas fa-graduation-cap example" style="margin-left: 622px"></a>
                         </div>
                     </div>
                 </div>
@@ -191,7 +193,7 @@
                     <div class="row">
                         <div class="col-sm-12 empty"></div>
                         <div class="col-sm-12" style="background-color: #555557;font-size: 23px;color:whitesmoke">REFERENCE
-                            <a class="fa fa-star" style="margin-left: 635px"></a>
+                            <a class="fa fa-star example" style="margin-left: 635px"></a>
                         </div>
                         <div style="margin:auto;text-align: center;margin-top: 10px;margin-bottom: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</div>
                     </div>
