--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row" id="back">
             <div class="col-sm-3 avatar"><img src="https://www.diplomacy.edu/sites/all/themes/jollyany/demos/no-avatar.jpg" width="250" style="border-radius: 50%;margin-top: 10px"></div>
             <div class="col-sm-9 info" id="padding">
-                <div class="col-sm" style="font-size:20px;margin: auto;text-align:center;height:25px;width:60%;background-color: #555557;color: whitesmoke">
+                <div class="col-sm" style="font-size:20px;margin: auto;text-align:center;width:60%;background-color: #555557;color: whitesmoke">
                     <div><strong>PERSONAL INFORMATION</strong></div>
                 </div>
                 <div class="col-sm-6 Mota" style="margin:auto;color:whitesmoke">
